--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -7,5 +7,5 @@ Author: Michael Hahsler
 Maintainer: Michael Hahsler <michael@hahsler.net>
 Description: Implementations of several Markov Models (MM) for comparing, matching and analyzing genetic sequences. E.g., simple MM, HMM, profile HMM and profile EMM.
 License: GPL-2
-Depends: seqinr, rEMM
+Depends: seqinr, rEMM, caTools, DBI, RSQLite
 LazyLoad: yes
