--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -2,10 +2,10 @@ Package: MMSA
 Type: Package
 Title: Markov Models in Sequence Analysis
 Version: 0.0-1
-Date: 2009-10-12
-Author: Michael Hahsler
-Maintainer: Michael Hahsler <michael@hahsler.net>
-Description: Implementations of several Markov Models (MM) for comparing, matching and analyzing genetic sequences. E.g., simple MM, HMM, profile HMM and profile EMM.
+Date: 2011-12-07
+Author: Michael Hahsler and Andy Nagar
+Maintainer: Michael Hahsler <michael@hahsler.net>, Andy Nagar <andynagar@yahoo.edu>
+Description: Infrastructure for position sensitive p-mer frequency clustering for gene sequence analysis, comparison, and classification. The package can read NCBI and Greengenes format fasta files and parse them into relational databases for further analysis. This work is supported by grant R21HG005912 from the National Human Genome Research Institute.
 License: GPL-2
 Depends: seqinr, rEMM, caTools, DBI, RSQLite
 LazyLoad: yes
