--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,4 +1,4 @@
-import("rEMM")
+#import("rEMM")
 
 export( 
 	GenClass16S,
@@ -25,11 +25,11 @@ export(
 	createModels,
 	classify,
 	validateModels,
-	score.GenModel ### make score a generic
+	scoreSequence
 )
+
 
 S3method(print, GenDB)
 S3method(print, GenModel)
 S3method(plot, GenModel)
-### S3method(score, GenModel)
 
