--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -30,6 +30,7 @@ export(
 
 
 S3method(print, GenDB)
+S3method(print, NSVSet)
 S3method(print, GenModel)
 S3method(plot, GenModel)
 S3method(scoreSequence, GenModel)
