--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -7,5 +7,5 @@ Author:  Andy Nagar and Michael Hahsler
 Maintainer: Michael Hahsler <michael@hahsler.net>, Andy Nagar <andynagar@yahoo.edu>
 Description: Infrastructure for position sensitive p-mer frequency clustering for gene sequence analysis, comparison, and classification. The package can read NCBI and Greengenes format fasta files and parse them into relational databases for further analysis. This work is supported by grant R21HG005912 from the National Human Genome Research Institute.
 License: GPL-2
-Depends: rEMM (>= 1.0-3), DBI, RSQLite, caTools, Biostrings
+Depends: rEMM (>= 1.0-3), DBI, RSQLite, caTools, Biostrings, methods
 LazyLoad: yes
