--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -17,6 +17,7 @@ export(
 	nSequences,
 	getSequences,
 
+	createNSVSet,
 	createNSVTable,
 	dropNSVTable,
 
@@ -36,5 +37,4 @@ S3method(print, GenDB)
 S3method(print, NSVSet)
 S3method(print, GenModel)
 S3method(plot, GenModel)
-S3method(scoreSequence, GenModel)
 
