--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,4 +1,3 @@
-#import("rEMM")
 
 export( 
 	GenClass16S,
@@ -22,6 +21,7 @@ export(
 	dropNSVTable,
 
 	genModel,
+	genModelDB,
 	processSequences,
 	createModels,
 	classify,
