Added clustering details to the genModelDB, added function getClusteringDetails which gives sequences for each cluster
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@160 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -15,7 +15,7 @@ export(
 	getHierarchy,
 	nSequences,
 	getSequences,
-
+    getClusteringDetails,
 	createNSVSet,
 	createNSVTable,
 	dropNSVTable,
