Added methods to get the clustering sequences and states. Fixed some errors in getSequences and genModelDB
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@163 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -12,10 +12,12 @@ export(
 	metaGenDB,
 	getClassification,
 	getRank,
+	getAllRanks,
 	getHierarchy,
 	nSequences,
 	getSequences,
     getClusteringDetails,
+	getClusteringSequences,
 	createNSVSet,
 	createNSVTable,
 	dropNSVTable,
