Added sequence logo and barplot functionality and fixed some bugs
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@166 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -21,7 +21,6 @@ export(
 	createNSVSet,
 	createNSVTable,
 	dropNSVTable,
-
 	genModel,
 	genModelDB,
 	processSequences,
@@ -29,9 +28,10 @@ export(
 	classify,
 	validateModels,
 	scoreSequence,
-
 	clustal,
-	simRank
+	simRank,
+	plot.NSVSet,
+	plotSeqLogo
 )
 
 
