Trying to make sequence logos
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@167 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -31,7 +31,10 @@ export(
 	clustal,
 	simRank,
 	plot.NSVSet,
-	plotSeqLogo
+	seqLogo.default,
+	seqLogo.DNAStringSet
+	#plot.DNAStringSet
+	#plotSeqLogo
 )
 
 
