Added sequence visualization functions
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@171 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -28,11 +28,11 @@ export(
 	scoreSequence,
 	clustal,
 	simRank,
-	plot.NSVSet,
-	#seqLogo
-	#seqLogo.default,
-	seqLogo.DNAStringSet
-	#plot.DNAStringSet
+	#plot.NSVSet,
+	seqLogo.DNAStringSet,
+	modelStatesPlot,
+	compareSequences,
+	findLargestCommon
 )
 import(
 	Biostrings
