Made some changes to visualize functions
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@172 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -28,7 +28,7 @@ export(
 	scoreSequence,
 	clustal,
 	simRank,
-	#plot.NSVSet,
+	plot.NSVSet,
 	seqLogo.DNAStringSet,
 	modelStatesPlot,
 	compareSequences,
