Created visualize methods, added man pages and updated vignette
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@173 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -28,8 +28,8 @@ export(
 	scoreSequence,
 	clustal,
 	simRank,
-	plot.NSVSet,
-	seqLogo.DNAStringSet,
+	plot.DNAStringSet,
+	#seqLogo.DNAStringSet,
 	modelStatesPlot,
 	compareSequences,
 	findLargestCommon
@@ -40,5 +40,6 @@ import(
 
 S3method(print, GenDB)
 S3method(print, NSVSet)
+S3method(plot, NSVSet)
 S3method(print, GenModel)
 S3method(plot, GenModel)
