more interface cleanup.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@175 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -49,5 +49,6 @@ import(Biostrings)
 S3method(print, GenDB)
 S3method(print, NSVSet)
 S3method(plot, NSVSet)
+S3method("[", NSVSet)
 S3method(print, GenModel)
 S3method(plot, GenModel)
