added plot for DNAMultipleAlignment, fixed getClusteringDetails.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@179 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -34,7 +34,7 @@ export(
 	simRank,
 	
 	plot.DNAStringSet,
-	#seqLogo.DNAStringSet,
+	plot.DNAMultipleAlignment,
 	modelStatesPlot,
 	compareSequences,
 	findLargestCommon,
