minor fixes for prune and clustal.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@180 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,3 +1,4 @@
+importFrom("rEMM", "prune")
 
 export( 
 	GenClass16S,
@@ -29,7 +30,7 @@ export(
 	classify,
 	validateModels,
 	scoreSequence,
-	
+
 	clustal,
 	simRank,
 	
