--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -4,8 +4,8 @@ Title: Markov Models in Sequence Analysis
 Version: 0.0-3
 Date: 20xx-xx-xx
 Author:  Anurag Nagar and Michael Hahsler
-Maintainer: Michael Hahsler <michael@hahsler.net>, Anurag Nagar <andynagar@yahoo.edu>
-Description: Infrastructure for position sensitive p-mer frequency clustering for gene sequence analysis, comparison, and classification. The package can read NCBI and Greengenes format fasta files and parse them into relational databases for further analysis. This work is supported by grant R21HG005912 from the National Human Genome Research Institute.
+Maintainer: Michael Hahsler <mhahsler@lyle.smu.edu>, Anurag Nagar <andynagar@yahoo.com>
+Description: Infrastructure for position sensitive p-mer frequency clustering for gene sequence analysis, quasi-alignment, comparison, and classification. The package can read FASTA files and import meta data from Greengenes into relational databases for further analysis. This work is supported by grant no. R21HG005912 from the National Human Genome Research Institute.
 License: GPL-2
-Depends: rEMM (>= 1.0-5), DBI, RSQLite, caTools, Biostrings, seqLogo, Hmisc
+Depends: rEMM (>= 1.0-6), DBI, RSQLite, caTools, Biostrings, seqLogo, Hmisc, methods
 LazyLoad: yes
