Package renamed to QuasiAlign.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@181 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: MMSA
+Package: QuasiAlign
 Type: Package
-Title: Markov Models in Sequence Analysis
+Title: Infrastructure for Quasi-Alignment of Genetic Sequences
 Version: 0.0-3
 Date: 20xx-xx-xx
 Author:  Anurag Nagar and Michael Hahsler
