Added graphical support for sequence plots, hypervariable regions, conserved regions
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@182 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -9,15 +9,15 @@ export(
 	listGenDB,
 	metaGenDB,
 	
-	getClassification,
+	getTaxonomyNames,
 	getRank,
 	getHierarchy,
 	
 	nSequences,
 	getSequences,
 	
-	getClusteringDetails,
-	getClusteringSequences,
+	getModelDetails,
+	getModelSequences,
 	
 	createNSVSet,
 	createNSVTable,
