Made changes to getSequences to handle multiple names, changes to validateModels and GenModelDB
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@191 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -42,7 +42,8 @@ export(
 	
 	### Greengenes
 	GenClass16S_Greengenes,
-	GreengenesMetaDataReader
+	GreengenesMetaDataReader,
+	randomizeGenDB
 )
 
 import(Biostrings)
