Fixed some problems; added function to create RDP training set
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@237 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: 8958cab4ecd430635434caf58d5091caad67381a

--- a/pkg/QuasiAlign/NAMESPACE
+++ b/pkg/QuasiAlign/NAMESPACE
@@ -39,7 +39,8 @@ export(
 	### Greengenes
 	GenClass16S_Greengenes,
 	GreengenesMetaDataReader,
-	randomizeGenDB
+	randomizeGenDB,
+	createRDPTraining
 )
 
 import(Biostrings)
