Fixed some errors and added a function for Qiime RDP
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@259 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: 06f4822670898a81621cd87c39852463eca493ae

--- a/pkg/RAlign/DESCRIPTION
+++ b/pkg/RAlign/DESCRIPTION
@@ -7,5 +7,5 @@ Author:  Michael Hahsler and Anurag Nagar
 Maintainer: Michael Hahsler <mhahsler@lyle.smu.edu>, Anurag Nagar <andynagar@yahoo.com>
 Description: Interfaces to several sequence alignment tools (clustalw, kalign) based on Biostrings (from Bioconductor).
 License: GPL-2
-Depends: Biostrings, seqLogo, proxy
+Depends: Biostrings, seqLogo, proxy, QuasiAlign
 LazyLoad: yes
