added basic BLAST support.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@265 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: 6de85b42ef0df315e5168c0915a7463b9013091d

--- a/pkg/RAlign/NAMESPACE
+++ b/pkg/RAlign/NAMESPACE
@@ -7,10 +7,13 @@ export(
 	
 	kalign,
 	kalign_help,
+
 	classifyRDP,
-#	checkRDPOutput,	
+
 	simRank,
-	
+
+	BLAST,
+
 	plot.DNAStringSet,
 	plot.DNAMultipleAlignment,
 	plot.RNAStringSet,
