added Copyright notice, upgraded code to latest Biostrings package.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@270 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: fc887c24f9ab761737fbd495880c0db71212c98f

--- a/pkg/RAlign/DESCRIPTION
+++ b/pkg/RAlign/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: RAlign
 Type: Package
-Title: Interfaces to several sequence alignment tools
+Title: Interfaces to several sequence alignment and clasification tools
 Version: 0.0-1
 Date: 20xx-xx-xx
 Author:  Michael Hahsler and Anurag Nagar
 Maintainer: Michael Hahsler <mhahsler@lyle.smu.edu>, Anurag Nagar <andynagar@yahoo.com>
 Description: Interfaces to several sequence alignment tools (clustalw, kalign) based on Biostrings (from Bioconductor).
 License: GPL-2
-Depends: Biostrings, seqLogo, proxy
-LazyLoad: yes
+Depends: Biostrings (>= 2.26.2), seqLogo, proxy
