upgraded to latest version of Biostrings.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@271 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: 21ffce7f881f042461aac8b35d7892a73951f653

--- a/pkg/QuasiAlign/DESCRIPTION
+++ b/pkg/QuasiAlign/DESCRIPTION
@@ -7,5 +7,5 @@ Author:  Anurag Nagar and Michael Hahsler
 Maintainer: Michael Hahsler <mhahsler@lyle.smu.edu>, Anurag Nagar <andynagar@yahoo.com>
 Description: Infrastructure for position sensitive p-mer frequency clustering for gene sequence analysis, quasi-alignment, comparison, and classification. The package can read FASTA files and import meta data from Greengenes into relational databases for further analysis. This work is supported by grant no. R21HG005912 from the National Human Genome Research Institute.
 License: GPL-2
-Depends: rEMM (>= 1.0-6), DBI, RSQLite, caTools, Biostrings, Hmisc, methods, foreach
+Depends: rEMM (>= 1.0-6), DBI, RSQLite, Biostrings, caTools, methods, foreach
 LazyLoad: yes
