upgraded to latest version of Biostrings.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@272 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: cce26d60d7404432b5a34e7556357a0d773c21e6

--- a/pkg/RAlign/DESCRIPTION
+++ b/pkg/RAlign/DESCRIPTION
@@ -5,6 +5,6 @@ Version: 0.0-1
 Date: 20xx-xx-xx
 Author:  Michael Hahsler and Anurag Nagar
 Maintainer: Michael Hahsler <mhahsler@lyle.smu.edu>, Anurag Nagar <andynagar@yahoo.com>
-Description: Interfaces to several sequence alignment tools (clustalw, kalign) based on Biostrings (from Bioconductor).
+Description: Interfaces to several sequence alignment tools (clustalw, kalign) based on Biostrings (from Bioconductor). This work is supported by grant no. R21HG005912 from the National Human Genome Research Institute.
 License: GPL-2
 Depends: Biostrings (>= 2.26.2), seqLogo, proxy
