--- a/pkg/RAlign/NAMESPACE
+++ b/pkg/RAlign/NAMESPACE
@@ -8,9 +8,11 @@ export(
 	kalign,
 	kalign_help,
 
-	classifyRDP,
+	RDP,
 	trainRDP,	
+	removeRDP,	
 	findAccuracy,
+	
 	simRank,
 
 	BLAST,
@@ -21,4 +23,5 @@ export(
 	plot.RNAMultipleAlignment
 )
 
-
+S3method(print, RDPClassifier)
+S3method(predict, RDPClassifier)
