Major refactoing. RAlign is now BioTools and has GenDB.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@278 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: e6ac67a68c36c02e0cfcd71c2cc62b4dedda186d

--- a/pkg/QuasiAlign/DESCRIPTION
+++ b/pkg/QuasiAlign/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: QuasiAlign
 Type: Package
 Title: Infrastructure for Quasi-Alignment of Genetic Sequences
-Version: 0.0-3
+Version: 0.0-4
 Date: 20xx-xx-xx
 Author:  Anurag Nagar and Michael Hahsler
 Maintainer: Michael Hahsler <mhahsler@lyle.smu.edu>, Anurag Nagar <andynagar@yahoo.com>
-Description: Infrastructure for position sensitive p-mer frequency clustering for gene sequence analysis, quasi-alignment, comparison, and classification. The package can read FASTA files and import meta data from Greengenes into relational databases for further analysis. This work is supported by grant no. R21HG005912 from the National Human Genome Research Institute.
+Description: Infrastructure for position sensitive p-mer frequency clustering for gene sequence analysis, quasi-alignment, comparison, and classification. This work is supported by grant no. R21HG005912 from the National Human Genome Research Institute.
 License: GPL-2
-Depends: rEMM (>= 1.0-6), DBI, RSQLite, Biostrings (>= 2.26.2), caTools, methods, foreach
-LazyLoad: yes
+Depends: BioTools, rEMM (>= 1.0-6), caTools, methods, foreach
+Suggests: caret, doMC
