--- a/pkg/QuasiAlign/NAMESPACE
+++ b/pkg/QuasiAlign/NAMESPACE
@@ -1,55 +1,45 @@
 importFrom("rEMM", "prune")
 
 export( 
-	GenClass16S,
-	addSequences,
-	createGenDB,
-	openGenDB,
-	reopenGenDB,
-	closeGenDB,
-	listGenDB,
-	metaGenDB,
-	
-	getTaxonomyNames,
-	getRank,
-	getHierarchy,
-	
-	nSequences,
-	getSequences,
-	
 	getModelDetails,
 	getModelSequences,
+	getSequences, ### replaces BioTools
 	
+	NSVSet,
 	createNSVSet,
 	createNSVTable,
 	dropNSVTable,
+	getNSVs,
 	
 	GenModel,
 	GenModelDB,
 	processSequences,
-	createModels,
-	classify,
-	validateModels,
+	
 	scoreSequence,
+	
+	GenClassifier,
+	removeGenClassifier,
+	trainGenClassifier,
+	
+	
+	### Greengenes
+	#createRDPTraining
+	#validateModels,
 
 	modelStatesPlot,
 	modelStatesBarPlot,
 	modelStatesLinePlot,
 	compareSequences,
-	findLargestCommon,
-	
-	### Greengenes
-	GenClass16S_Greengenes,
-	GreengenesMetaDataReader,
-	randomizeGenDB,
-	createRDPTraining
+	findLargestCommon
+
 )
 
-import(Biostrings)
+#import(Biostrings)
 
-S3method(print, GenDB)
 S3method(print, NSVSet)
 S3method(plot, NSVSet)
 S3method("[", NSVSet)
 S3method(print, GenModel)
 S3method(plot, GenModel)
+S3method(predict, GenClassifier)
+S3method(print, GenClassifier)
