--- a/pkg/QuasiAlign/DESCRIPTION
+++ b/pkg/QuasiAlign/DESCRIPTION
@@ -7,5 +7,5 @@ Author:  Anurag Nagar and Michael Hahsler
 Maintainer: Michael Hahsler <mhahsler@lyle.smu.edu>, Anurag Nagar <andynagar@yahoo.com>
 Description: Infrastructure for position sensitive p-mer frequency clustering for gene sequence analysis, quasi-alignment, comparison, and classification. This work is supported by grant no. R21HG005912 from the National Human Genome Research Institute.
 License: GPL-2
-Depends: BioTools, rEMM (>= 1.0-6), caTools, methods, foreach
+Depends: Biostrings, BioTools, rEMM (>= 1.0-6), caTools, methods, foreach
 Suggests: caret, doParallel
