added boxshade support.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@289 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: 1f107537cf16bf67ac850855513b92aaf53e96c2

--- a/pkg/BioTools/NAMESPACE
+++ b/pkg/BioTools/NAMESPACE
@@ -22,6 +22,10 @@ export(
 	### BLAST
 	BLAST,
 
+	### boxshade
+	boxshade,
+	boxshade_help,
+
 	### visualizations for BioStrings
 	plot.DNAStringSet,
 	plot.DNAMultipleAlignment,
