some fixes and BLAST uses not predict.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@295 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: bd6d7523d4b49a7b01ce2559035f6161cc405b62

--- a/pkg/BioTools/NAMESPACE
+++ b/pkg/BioTools/NAMESPACE
@@ -21,6 +21,7 @@ export(
 
 	### BLAST
 	BLAST,
+	BLAST_help,
 
 	### boxshade
 	boxshade,
@@ -56,6 +57,9 @@ export(
 
 S3method(print, RDPClassifier)
 S3method(predict, RDPClassifier)
+
+S3method(print, BLAST)
+S3method(predict, BLAST)
 
 S3method(print, GenDB)
 
