added boxshade to requiredSoftware.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@299 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: 0c4d5c23b7d26f85789ef343623b5cfbe2810b00

--- a/pkg/BioTools/DESCRIPTION
+++ b/pkg/BioTools/DESCRIPTION
@@ -7,6 +7,6 @@ Author:  Michael Hahsler and Anurag Nagar
 Maintainer: Michael Hahsler <mhahsler@lyle.smu.edu>, Anurag Nagar <andynagar@yahoo.com>
 Description: Interfaces several popular tools for sequence alignment (clustalw, kalign), data base search (BLAST) and classification (RDP). Also provides a database to manage 16S rRNA sequences. Based on Biostrings (from Bioconductor). This work is supported by grant no. R21HG005912 from the National Human Genome Research Institute.
 Depends: Biostrings (>= 2.26.2), DBI, RSQLite, seqLogo, proxy
-SystemRequirements: rdp-classifier, clustalw, kalign, ncbi-blast+
+SystemRequirements: rdp-classifier, clustalw, kalign, ncbi-blast+, boxshade
 Enhances: Biostrings
 License: GPL-2
