improved annotation reader.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@322 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: 635196a019a723d91085d849c6443fe8e7d1ecc6

--- a/pkg/BioTools/NAMESPACE
+++ b/pkg/BioTools/NAMESPACE
@@ -44,7 +44,9 @@ export(
 	### GenDB
 	GenClass16S,
 	GenClass16S_Greengenes,
-	GreengenesMetaDataReader,
+	Annotation_Greengenes,
+	Annotation_RDP,
+	Annotation_Id,
 	
 	addSequences,
 	createGenDB,
