--- a/pkg/QuasiAlign/NAMESPACE
+++ b/pkg/QuasiAlign/NAMESPACE
@@ -1,7 +1,12 @@
+import(methods)
+
 importFrom("rEMM", "prune")
 import(Biostrings)
+
 import(BioTools)
 
+import(foreach)
+importFrom("caTools", "base64decode", "base64encode")
 
 export( 
 	getModelDetails,
