Added working with random sequences.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@326 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: ecebb4b41695a098509ef5baf05a490b71b4b241

--- a/pkg/BioTools/NAMESPACE
+++ b/pkg/BioTools/NAMESPACE
@@ -1,4 +1,8 @@
 import(Biostrings)
+import(DBI)
+import(RSQLite)
+import(seqLogo)
+import(proxy)
 
 export( 
 	### clustal
@@ -62,8 +66,12 @@ export(
 	getHierarchy,
 
 	nSequences,
-	getSequences
-)
+	getSequences,
+
+  random_sequences,
+  mutations,
+  NSVdist
+  )
 
 S3method(print, RDPClassifier)
 S3method(predict, RDPClassifier)
