--- a/pkg/BioTools/DESCRIPTION
+++ b/pkg/BioTools/DESCRIPTION
@@ -3,8 +3,10 @@ Type: Package
 Title: Tools based on Biostrings (alignment, classification, database)
 Version: 0.0-2
 Date: 20xx-xx-xx
-Author:  Michael Hahsler and Anurag Nagar
-Maintainer: Michael Hahsler <mhahsler@lyle.smu.edu>, Anurag Nagar <andynagar@yahoo.com>
+Authors@R: c(person("Michael", "Hahsler", role = c("aut", "cre", "cph"),
+	    email = "mhahsler@lyle.smu.edu"),
+	person("Anurag", "Nagar", role = c("aut","cph"),
+	    email="andynagar@yahoo.com"))
 Description: Interfaces several popular tools for sequence alignment (clustalw, mafft, kalign), data base search (BLAST) and classification (RDP). Also provides a database to manage 16S rRNA sequences. Based on Biostrings (from Bioconductor). This work is supported by grant no. R21HG005912 from the National Human Genome Research Institute.
 Depends: Biostrings (>= 2.26.2), DBI, RSQLite, seqLogo, proxy
 SystemRequirements: rdp-classifier, clustalw, kalign, ncbi-blast+, boxshade
