added more distances.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@328 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: 46f8bdd19b24164856cd75d02dde63b0cce859e3

--- a/pkg/BioTools/DESCRIPTION
+++ b/pkg/BioTools/DESCRIPTION
@@ -8,6 +8,6 @@ Authors@R: c(person("Michael", "Hahsler", role = c("aut", "cre", "cph"),
 	person("Anurag", "Nagar", role = c("aut","cph"),
 	    email="andynagar@yahoo.com"))
 Description: Interfaces several popular tools for sequence alignment (clustalw, mafft, kalign), data base search (BLAST) and classification (RDP). Also provides a database to manage 16S rRNA sequences. Based on Biostrings (from Bioconductor). This work is supported by grant no. R21HG005912 from the National Human Genome Research Institute.
-Depends: Biostrings (>= 2.26.2), DBI, RSQLite, seqLogo, proxy
+Depends: Biostrings (>= 2.26.2), DBI, RSQLite, seqLogo, proxy, ape
 SystemRequirements: rdp-classifier, clustalw, kalign, ncbi-blast+, boxshade
 License: GPL-2
