Fixes for the installation wizard.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@339 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: d3f9e11e03911ea3a4a3dd02bfc8047e76c2ce6d

--- a/pkg/BioTools/NAMESPACE
+++ b/pkg/BioTools/NAMESPACE
@@ -7,7 +7,9 @@ import(proxy)
 importFrom(ape, dist.dna, as.DNAbin)
 
 export( 
-	### clustal
+	BioTools_Software_Wizard,
+  
+  ### clustal
 	clustal,
 	clustal_help,
 #	clustal_profile,
