--- a/pkg/BioTools/DESCRIPTION
+++ b/pkg/BioTools/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R: c(person("Michael", "Hahsler", role = c("aut", "cre", "cph"),
 	person("Anurag", "Nagar", role = c("aut","cph"),
 	    email="andynagar@yahoo.com"))
 Description: Interfaces several popular tools for sequence alignment (clustalw, mafft, kalign), data base search (BLAST) and classification (RDP). Also provides a database to manage 16S rRNA sequences. Based on Biostrings (from Bioconductor). This work is supported by grant no. R21HG005912 from the National Human Genome Research Institute.
-Depends: Biostrings (>= 2.26.2), DBI, RSQLite
-Imports: seqLogo, ape, proxy
-SystemRequirements: rdp-classifier, clustalw, kalign, ncbi-blast+, boxshade
-License: GPL-2
+Depends: Biostrings (>= 2.26.2), DBI, RSQLite, proxy (>= 0.4-12)
+Imports: seqLogo, ape
+SystemRequirements: Java, rdp-classifier, clustalw, kalign, ncbi-blast+, boxshade
+License: GPL-3
