all calls are now consitently lower case.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@363 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: 446d07b0bea91b80659ea306fae31af0da3a7b9c

--- a/pkg/BiostringsTools/NAMESPACE
+++ b/pkg/BiostringsTools/NAMESPACE
@@ -23,11 +23,11 @@ export(
   mafft_help,
   
   ### MUSCLE
-  MUSCLE,
-  MUSCLE_help,
+  muscle,
+  muscle_help,
   
 	### RDP
-	RDP,
+	rdp,
 	trainRDP,	
 	removeRDP,	
 	findAccuracy,
@@ -36,8 +36,8 @@ export(
 	simRank,
 
 	### BLAST
-	BLAST,
-	BLAST_help,
+	blast,
+	blast_help,
 
 	### boxshade
 	boxshade,
