--- a/pkg/BiostringsTools/DESCRIPTION
+++ b/pkg/BiostringsTools/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: BiostringsTools
 Type: Package
-Title: Tools based on Biostrings (alignment, classification, database)
+Title: Interface to Tools for Biostrings (alignment, classification, database)
 Version: 0.0-3
 Date: 20xx-xx-xx
 Authors@R: c(person("Michael", "Hahsler", role = c("aut", "cre", "cph"),
 	    email = "mhahsler@lyle.smu.edu"),
 	person("Anurag", "Nagar", role = c("aut","cph"),
 	    email="andynagar@yahoo.com"))
-Description: Interfaces several popular tools for sequence alignment (clustalw, mafft, kalign), data base search (BLAST) and classification (RDP). Also provides a database to manage 16S rRNA sequences. Based on Biostrings (from Bioconductor). This work is supported by grant no. R21HG005912 from the National Human Genome Research Institute.
+Description: Seamlessly interfaces several popular tools for sequence alignment (ClustalW, MAFFT, MUSCLE, Kalign), data base search (BLAST), classification (RDP) and a database to manage 16S rRNA sequences with Biostrings (from Bioconductor). The package includes a software installation wizard. This work is supported by grant no. R21HG005912 from the National Human Genome Research Institute.
 Depends: Biostrings (>= 2.26.2), DBI, RSQLite, proxy (>= 0.4-12)
 Imports: seqLogo, ape
 SystemRequirements: Java, rdp-classifier, clustalw, kalign, ncbi-blast+, boxshade
