--- a/pkg/rRDP/NAMESPACE
+++ b/pkg/rRDP/NAMESPACE
@@ -5,7 +5,14 @@ export(
 	rdp,
 	trainRDP,	
 	removeRDP,	
-	findAccuracy
+  
+  GenClass16S,
+  encode_Greengenes,
+  decode_Greengenes,
+  encode_RDP,
+  decode_RDP,
+	accuracy,
+  confusionTable
   )
 
 S3method(print, RDPClassifier)
