--- a/pkg/BiostringsTools/DESCRIPTION
+++ b/pkg/BiostringsTools/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: BiostringsTools
 Title: Interface to Tools for Biostrings (alignment, classification, database)
 Description: Seamlessly interfaces several popular tools for sequence alignment (ClustalW, MAFFT, MUSCLE, Kalign), data base search (BLAST), classification (RDP) and a database to manage 16S rRNA sequences with Biostrings (from Bioconductor). The package includes a software installation wizard. This work is supported by grant no. R21HG005912 from the National Human Genome Research Institute.
-Version: 0.99.0
-Date: 2014-07-23
+Version: 0.99.1
+Date: 2015-xx-xx
 Author: Michael Hahsler, Anurag Nagar
 Maintainer: Michael Hahsler <mhahsler@lyle.smu.edu>
 biocViews: Genetics, Sequencing, Infrastructure,
