Removed caret (built problem on r-forge).
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@378 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: 26e6f835a2e624e1c9d17cd0f0aa73d14e4140fb

--- a/pkg/QuasiAlign/NAMESPACE
+++ b/pkg/QuasiAlign/NAMESPACE
@@ -1,11 +1,11 @@
 import(methods)
 
-
 import(Biostrings)
 import(BiostringsTools)
 import(foreach)
+import(rEMM)
+import(DBI)
 
-importFrom("rEMM", "prune")
 importFrom("caTools", "base64decode", "base64encode")
 
 export( 
