--- a/pkg/QuasiAlign/DESCRIPTION
+++ b/pkg/QuasiAlign/DESCRIPTION
@@ -9,6 +9,6 @@ Authors@R: c(person("Michael", "Hahsler", role = c("aut", "cre", "cph"),
 		email="andynagar@yahoo.com"))
 Description: Infrastructure for position sensitive p-mer frequency clustering for gene sequence analysis, quasi-alignment, comparison, and classification. This work is supported by grant no. R21HG005912 from the National Human Genome Research Institute.
 License: GPL-2
-Depends: Biostrings, BiostringsTools (>= 0.99.1), rEMM (>= 1.0-8) 
+Depends: Biostrings, BiostringsTools (>= 0.99.1), rEMM (>= 1.0-8), DBI 
 Imports: methods, caTools, foreach
 Suggests: caret, class, e1071, doParallel, testthat
