--- a/pkg/rMSA/DESCRIPTION
+++ b/pkg/rMSA/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: rMSA
 Title: Interface to Popular Multiple Sequence Alignment Tools
-Description: Seamlessly interfaces the Multiple Sequence Alignment software packages ClustalW, MAFFT, MUSCLE and Kalign (downloaded separately).
+Description: rMSA is now maintained on github (http://github.com/mhahsler/rMSA)
 Version: 0.99.0
 Date: 2014-xx-xx
 Author: Michael Hahsler, Anurag Nagar
